package ar.uba.fi.algo3.final20200910.componentes;

public interface Componente {

    int getConsumo();
}
